@@ -1,3 +1,8 @@
+2005-02-06  Owen Taylor  <otaylor@redhat.com>
+
+	* src/cairo_win32_font.c (_cairo_win32_font_text_to_glyphs): Free
+	glyph_indices, not glyphs. (Reported by Hans Breuer.)
+
 2005-02-05  Carl Worth  <cworth@cworth.org>
 
 	* configure.in: Add message stating why glitz backend is disabled.
